test/files/neg/tcpoly_variance.check
<<<<<<< HEAD
tcpoly_variance.scala:6: error: overriding method str in class A of type => m[java.lang.Object];
=======
tcpoly_variance.scala:6: error: overriding method str in class A of type => m[Object];
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
 method str has incompatible type
 override def str: m[String]  = sys.error("foo") // since x in m[x] is invariant, ! m[String] <: m[Object]
              ^
one error found
